[gd_scene load_steps=6 format=2]

[ext_resource path="res://Assets/Objects/SoundSystem/SoundSystem.gd" type="Script" id=1]
[ext_resource path="res://Assets/Audios/Sounds/shoot.wav" type="AudioStream" id=2]
[ext_resource path="res://Assets/Audios/Sounds/die.wav" type="AudioStream" id=3]
[ext_resource path="res://Assets/Audios/Sounds/explosion.wav" type="AudioStream" id=4]
[ext_resource path="res://Assets/Audios/Sounds/pickItem.wav" type="AudioStream" id=5]

[node name="SoundSystem" type="Node2D"]
script = ExtResource( 1 )

[node name="SoundShot" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource( 2 )

[node name="SoundDie" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource( 3 )

[node name="SoundExplosion" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource( 4 )

[node name="SoundPickItem" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource( 5 )
